--- a/YusupovHotel/Pages/BookingPageForCheck.razor
+++ b/YusupovHotel/Pages/BookingPageForCheck.razor
@@ -50,7 +50,7 @@
                         <p class="mb-0">Тип номера</p>
                     </div>
                     <div class="col-sm-7">
-                            <InputText class="bookingInput" type="text" @bind-Value="booking.Room.Type" disabled> </InputText>
+                            <InputText class="bookingInput" type="text" @bind-Value="booking.Room.RoomType" disabled> </InputText>
                     </div>
                 </div>
                 <hr>
@@ -77,7 +77,7 @@
                 <p class="mb-0">Номер</p>
             </div>
             <div class="col-sm-7">
-                    <InputNumber class="bookingInput" @bind-Value="@booking.Room.Number"  disabled></InputNumber>
+                    <InputNumber class="bookingInput" @bind-Value="@booking.Room.RoomNumber"  disabled></InputNumber>
             </div>
         </div>
         <hr>
